# LLM-Inference-Tool

./: README.md
cmake-demo/: CMakeLists.txt
cmake-demo/src/: main.cpp
notes/: week1_linux_basic.md
scripts/: start_llm_demo.ssh
test-zip/unzip-dir/: test2.txt
week01/: .gitignore  monitor_server.sh  run_tiny_llm.sh
week01/cmake-demo/include/: hello.h
week01/cmake-demo/src/: hello.cpp  main.cpp
week01/cpp_helloworld/: CMakeLists.txt
week01/cpp_helloworld/src/: hello.cpp
week01/test-zip/unzip-dir/: test1.txt
